[package]
name = "web-api"
version = "0.1.0"
authors = ["Soe Thu <soethu@dms.cloud>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = { version = "1.0.117", features = ["derive"] }
sysinfo = "0.3.19"
rusqlite = "0.25.3"
